objects/tffa__FinancialNeedStatusHistory__c.object
<CustomObject>
    <description>Records the financial need&apos;s characteristics as it transitions from one status to another. Basically a snapshot of the financial need at the time of transition.</description>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Fact__c</fullName>
        <description>Parent fact</description>
        <label>Fact</label>
        <referenceTo>tffa__FinancialNeedFact__c</referenceTo>
        <relationshipLabel>Financial Need Status Histories</relationshipLabel>
        <relationshipName>StatusHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional reference to financial need.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Financial Need Status Histories</relationshipLabel>
        <relationshipName>StatusHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>Financial needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>The status of the financial need, when the snapshot was taken.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialNeedStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Financial Need Status History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Need Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>